maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:77: error: not found: value EAST
    setDirection(EAST)
                 ^